@startuml DomainModel

skinparam classAttributeIconSize 0
skinparam backgroundColor white
skinparam shadowing false

title Domain Model - Intelligent Personal Finance Management System
footer Group 28 | Karan Patel, Samarth Shete | CSCI 6234

' ============================================================
' DOMAIN ENTITIES
' ============================================================

class User {
  +userId: UUID
  +name: String
  +email: String
}

abstract class FinancialAccount {
  +accountId: UUID
  +nickname: String
  +currency: String
  +isActive: Boolean
}

class BankAccount {
  +routingNumberLast4: String
  +accountType: String
}

class CreditCardAccount {
  +cardLast4: String
  +creditLimit: Decimal
}

class InvestmentAccount {
  +brokerName: String
  +accountType: String
}

class Institution {
  +institutionId: UUID
  +name: String
}

class Transaction {
  +transactionId: UUID
  +postedDate: Date
  +amount: Decimal
  +description: String
}

class Merchant {
  +merchantId: UUID
  +name: String
}

class Category {
  +categoryId: UUID
  +name: String
  +type: String
}

class Budget {
  +budgetId: UUID
  +name: String
  +periodStart: Date
  +periodEnd: Date
  +periodType: String
}

class BudgetItem {
  +budgetItemId: UUID
  +limitAmount: Decimal
}

class BudgetAlert {
  +alertId: UUID
  +thresholdPercent: Int
  +isRead: Boolean
  +createdAt: DateTime
}

' ============================================================
' INHERITANCE RELATIONSHIPS
' ============================================================

FinancialAccount <|-- BankAccount
FinancialAccount <|-- CreditCardAccount
FinancialAccount <|-- InvestmentAccount

' ============================================================
' ASSOCIATIONS WITH NAMES
' ============================================================

User "1" -- "0..*" FinancialAccount : owns >
User "1" -- "0..*" Budget : creates >
User "1" -- "0..*" BudgetAlert : receives >

Institution "1" -- "0..*" FinancialAccount : provides >

FinancialAccount "1" -- "0..*" Transaction : contains >

Transaction "*" -- "0..1" Category : belongsTo >
Transaction "*" -- "0..1" Merchant : paidTo >

Budget "1" -- "1..*" BudgetItem : contains >
BudgetAlert "*" -- "0..1" Budget : monitors >

BudgetItem "*" -- "1" Category : tracksSpendingIn >

@enduml
